--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Timer</string>
+    <string name="init_time">00:00:00</string>
+    <string name="button_start">Старт</string>
+    <string name="button_pause">Пауза</string>
+    <string name="button_reset">Сброс</string>
 </resources>
